updated index head content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PDF Cropper</title>
+    <title>Online PDF Cropper – Crop PDF Pages Easily</title>
+    <meta name="description" content="Crop PDF files quickly and for free. Select and crop specific pages or the whole PDF. No login required.">
+    <meta name="keywords" content="PDF crop, crop PDF, online PDF cropper, trim PDF, edit PDF pages">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://sabarinath.dev/" />
+    <meta property="og:title" content="Online PDF Cropper" />
+    <meta property="og:description" content="Free Open Source tool to crop PDF files online - fast and easy." />
+    <!-- <meta property="og:image" content="https://yourdomain.com/og-image.png" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta name="twitter:card" content="summary_large_image" /> -->
   </head>
   <body>
     <div id="root"></div>
